Added Mom stuff

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>The HTML5 Herald</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+</head>
+
+<body>
+  <h1>Dr. Roma Palcan</h1>
+  <p>Psychologist in action.</p>
+  <img src="http://3.bp.blogspot.com/_zE83wFxpcdE/TKEzoscTFaI/AAAAAAAAAAM/U7Vc2iNV5oE/s1600/Photo+on+2010-09-13+at+19.55.jpg" alt = "Roma">
+</body>
+</html>
