--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
 
   <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <meta name="description" content="Roma Palcan">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 </head>
