--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Dr. Roma Palcan</title>
   <meta name="description" content="Roma Palcan">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="https://github.com/AdriannaWenz/AdriannaWenz.github.io/blob/master/css/main.scss">
 </head>
 
 <body>
