--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>Dr. Roma Palcan</title>
   <meta name="description" content="Roma Palcan">
-
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://github.com/AdriannaWenz/AdriannaWenz.github.io/blob/master/css/main.scss">
   <style>
     body {
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <h1>Dr. Roma Palcan</h1>
+  <h1 class= span4>Dr. Roma Palcan</h1>
   <p>Psychologist in action.</p>
   <img src="http://3.bp.blogspot.com/_zE83wFxpcdE/TKEzoscTFaI/AAAAAAAAAAM/U7Vc2iNV5oE/s1600/Photo+on+2010-09-13+at+19.55.jpg" alt = "Roma">
 </body>
