--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </ul>
   </nav>
   
-  <div class="container">
+  <div class="content container">
     <h1>Dr. Roma Palcan</h1>
     <p>Psychologist in action.</p>
     <img class ="center-block" src="http://3.bp.blogspot.com/_zE83wFxpcdE/TKEzoscTFaI/AAAAAAAAAAM/U7Vc2iNV5oE/s1600/Photo+on+2010-09-13+at+19.55.jpg" alt = "Roma">
