--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <meta name="description" content="Roma Palcan">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="https://github.com/AdriannaWenz/AdriannaWenz.github.io/blob/master/css/main.scss">
+  <style>
+    .content {
+      padding-top: 70px;
+    }
+  </style>
 </head>
 
 <body>
