--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
     </ul>
   </nav>
   
-  <div class="content container">
-    <h1>Dr. Roma Palcan</h1>
-    <p>Psychologist in action.</p>
-    <img class ="center-block" src="http://3.bp.blogspot.com/_zE83wFxpcdE/TKEzoscTFaI/AAAAAAAAAAM/U7Vc2iNV5oE/s1600/Photo+on+2010-09-13+at+19.55.jpg" alt = "Roma">
+  <div class="content container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+         <h1>Dr. Roma Palcan</h1>
+        <p>Psychologist in action.</p>
+        <img class ="center-block" src="http://3.bp.blogspot.com/_zE83wFxpcdE/TKEzoscTFaI/AAAAAAAAAAM/U7Vc2iNV5oE/s1600/Photo+on+2010-09-13+at+19.55.jpg" alt = "Roma">
+      </div>
+    </div>
   </div>
   
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
