--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     .content {
       padding-top: 70px;
     }
+    
+    body {
+      background-image: mountains-1030812_1920.jpg;
+    }
   </style>
 </head>
 
