Tried background image again

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     }
     
     body {
-      background-image: mountains-1030812_1920.jpg;
+      background: mountains-1030812_1920.jpg;
+      background-size: cover;
     }
   </style>
 </head>
