--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     
     body {
-      background: url(http://assets.worldwildlife.org/photos/2325/images/hero_full/mountains-hero.jpg?1345838509);
+      background-image: url(http://assets.worldwildlife.org/photos/2325/images/hero_full/mountains-hero.jpg?1345838509);
       background-size: cover;
     }
   </style>
