--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       background-image: url(http://assets.worldwildlife.org/photos/2325/images/hero_full/mountains-hero.jpg?1345838509);
       background-size: cover;
     }
+    
+    .col-md-12 {
+      color: white;
+    }
   </style>
 </head>
 
