--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <div class="content container-fluid">
     <div class="row">
       <div class="col-md-12">
-         <h1>Dr. Roma Palcan</h1>
-        <p>Psychologist in action.</p>
+         <h1 class="center-block">Dr. Roma Palcan</h1>
+        <p class="center-block">Psychologist in action.</p>
         <img class ="center-block" src="http://3.bp.blogspot.com/_zE83wFxpcdE/TKEzoscTFaI/AAAAAAAAAAM/U7Vc2iNV5oE/s1600/Photo+on+2010-09-13+at+19.55.jpg" alt = "Roma">
       </div>
     </div>
