--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     }
     
     body {
-      background-image: url(http://assets.worldwildlife.org/photos/2325/images/hero_full/mountains-hero.jpg?1345838509);
+      background-image: url(https://i.ytimg.com/vi/i50ZAs7v9es/maxresdefault.jpg);
       background-size: cover;
     }
     
     h1, p {
-      color: white;
+      color: black;
+      background-color: rgba(255,255,255,0.9);
+      text-align: center;
     }
   </style>
 </head>
