--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <ul class="nav navbar-nav">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
