--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
       <div class="col-md-12">
         <h1>I live to serve</h1>
         <p>It's true, I do. And I live to serve you!</p>
-        <img src="http://e2ua.com/data/wallpapers/1/WDF_499313.jpg" alt="Serving">
+        <img class="center-block" src="http://e2ua.com/data/wallpapers/1/WDF_499313.jpg" alt="Serving">
       </div>
     </div>
   </div>
