--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
     
     body {
-      background-image: url(https://i.ytimg.com/vi/i50ZAs7v9es/maxresdefault.jpg) no-repeat center center fixed;
+      background-image: url("https://i.ytimg.com/vi/i50ZAs7v9es/maxresdefault.jpg") no-repeat center center fixed;
       background-size: cover;
     }
     
