--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    
+    <style> 
+        .img-left {
+            max-height: 400px;
+        }
+    </style>
 
 </head>
 
@@ -122,7 +128,7 @@
                         <strong>cares</strong>
                     </h2>
                     <hr>
-                    <img class="img-responsive img-border img-left" src="img/MOM.PNG" alt="">
+                    <img class="img-responsive img-border img-left" src="img/MOM.PNG" alt="Dr. Roma Palcan">
                     <hr class="visible-xs">
                     <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
                     <p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
