--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,9 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
+                    <li>
+                        <a href="forms.html">Forms</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
