--- a/forms.html
+++ b/forms.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Psychologist in Saint Petersburg">
+    <meta name="author" content="Roma Palcan">
 
-    <title>About - Business Casual - Start Bootstrap Theme</title>
+    <title>Roma Palcan</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -18,8 +18,8 @@
     <link href="css/business-casual.css" rel="stylesheet">
 
     <!-- Fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -27,13 +27,14 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+ 
 
 </head>
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Dr. Roma Palcan</div>
+    <div class="address-bar">1201 5th Ave N Ste 300 | Saint Petersburg, FL 33705 | 727.647.2144</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -100,8 +101,10 @@
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
-                    <a href="officepolicies.pdf">Office Policies<a>
-                    <a href="privacyinformation.pdf">H.I.P.P.A. Privacy Information<a>
+                    <ul>
+                       <li> <a href="officepolicies.pdf">Office Policies<a></li>
+                        <li></li><a href="privacyinformation.pdf">H.I.P.P.A. Privacy Information<a></li> 
+                    </ul>
                 </div>
                 <div class="clearfix"></div>
             </div>
