--- a/forms.html
+++ b/forms.html
@@ -81,35 +81,21 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">About
-                        <strong>business casual</strong>
+                    <h2 class="intro-text text-center">
+                        <strong>Forms</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
-                </div>
-                <div class="col-md-6">
-                    <p>This is a great place to introduce your company or project and describe what you do.</p>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
+                    <p>Please fill out and bring to the office on your first visit.</p>
                     <ul>
                        <li> <a href="officepolicies.pdf">Office Policies<a></li>
-                        <li></li><a href="privacyinformation.pdf">H.I.P.P.A. Privacy Information<a></li> 
+                        <li><a href="privacyinformation.pdf">H.I.P.P.A. Privacy Information<a></li> 
                     </ul>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
-
     </div>
     <!-- /.container -->
 
