--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <p>Copyright &copy; Your Website 2014</p>
+                    <p>Photo credit: "Silence" by <a href="https://www.flickr.com/photos/137731904@N05/">N Medd</a> under the <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">Creative Commons License</a></p>
                 </div>
             </div>
         </div>
