changed phone, bottom too

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 
     <div class="brand">Dr. Roma Palcan</div>
-    <div class="address-bar">1201 5th Ave N Ste 300 | Saint Petersburg, FL 33705 | 727.647.2144</div>
+    <div class="address-bar">1201 5th Ave N Ste 300 | Saint Petersburg, FL 33705 | 727.895.4500</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -161,8 +161,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
-                    <p>Photo credit: "Silence" by <a href="https://www.flickr.com/photos/137731904@N05/">N Medd</a> under the <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">Creative Commons License</a></p>
+                    <p>Copyright &copy; Your Website 2014
+                    <br>
+                    <small>Photo credit: "Silence" by <a href="https://www.flickr.com/photos/137731904@N05/">N Medd</a> under the <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">Creative Commons License</a></small></p>
                 </div>
             </div>
         </div>
