--- a/services.html
+++ b/services.html
@@ -109,19 +109,37 @@
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
+                    <h3>CBT
                         <small>Job Title</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
+                    <h3>Exposure/Response
                         <small>Job Title</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
+                    <h3>Couples Counseling
+                        <small>Job Title</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>Group Therapy
+                        <small>Job Title</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>Conflict/Resolution
+                        <small>Job Title</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>Diagnostics
                         <small>Job Title</small>
                     </h3>
                 </div>
@@ -136,7 +154,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Roma Palcan 2016
+                    <br>
+                    <small>Photo credit: "Silence" by <a href="https://www.flickr.com/photos/137731904@N05/">N Medd</a> under the <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">Creative Commons License</a></small></p>
                 </div>
             </div>
         </div>
