--- a/services.html
+++ b/services.html
@@ -102,46 +102,40 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Our
-                        <strong>Team</strong>
+                    <h2 class="intro-text text-center">Offered
+                        <strong>Services</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>CBT
-                        <small>Job Title</small>
-                    </h3>
+                    <img class="img-responsive" src="../img/almond.jpg" alt="">
+                    <h3>CBT</h3>
+                    <p>Stuff</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>Exposure/Response
-                        <small>Job Title</small>
-                    </h3>
+                    <img class="img-responsive" src="../img/jellyfish.jpg" alt="">
+                    <h3>Exposure/Response</h3>
+                    <p>Stuff</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>Couples Counseling
-                        <small>Job Title</small>
-                    </h3>
+                    <img class="img-responsive" src="../img/spring.jpg" alt="">
+                    <h3>Couples Counseling</h3>
+                    <p>Stuff</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>Group Therapy
-                        <small>Job Title</small>
-                    </h3>
+                    <img class="img-responsive" src="../img/oilseed.jpg" alt="">
+                    <h3>Group Therapy</h3>
+                    <p>Stuff</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>Conflict/Resolution
-                        <small>Job Title</small>
-                    </h3>
+                    <img class="img-responsive" src="../img/lavender.jpg" alt="">
+                    <h3>Conflict/Resolution</h3>
+                    <p>Stuff</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>Diagnostics
-                        <small>Job Title</small>
-                    </h3>
+                    <img class="img-responsive" src="../img/leaf.jpg" alt="">
+                    <h3>Diagnostics</h3>
+                    <p>Stuff</p>
                 </div>
                 <div class="clearfix"></div>
             </div>
