--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
     <!-- Fonts -->
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -49,7 +50,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">Roma Palcan</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -83,7 +84,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">About
-                        <strong>business casual</strong>
+                        <strong>Dr. Roma Palcan</strong>
                     </h2>
                     <hr>
                 </div>
@@ -91,9 +92,14 @@
                     <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
                 </div>
                 <div class="col-md-6">
-                    <p>This is a great place to introduce your company or project and describe what you do.</p>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>Dr. Roma Palcan is a licensed psychologist with over twenty years of psychological services to adults, children, and families in the state of Florida.  Her private practice opened in 1996 in Clearwater, FL.  For the last 8 years she has been affiliated with Bay Pines VA Health Care System and serves there as the Health Behavior Coordinator where she is the chief consultant to the medical staff  in health coaching and Motivational Interviewing. She has also developed their tobacco cessation  program and co-developed their weight loss program.   She serves as an adjunct faculty at Barry University and supervises both Physician Assistant students and psychology interns at Bay Pines VA Health Care Center. 
+Her private practice, separate from the VA, is located in St. Petersburg, Florida.</p>
+                    <p>Dr. Palcan specializes in anxiety/stress, depression, health psychology, couples/family therapy, men’s issues, parenting, adolescence, grief/loss, tobacco cessation, and weight loss.</p>
+                    <p>Dr. Palcan is a dynamic public speaker and educator.  She has presented on some of the following topics: intimate partner violence, grief and loss, parenting, empowerment, motivational interviewing, health behavior change, and various other health topics.  
+</p>
+                    <p>Dr. Palcan attended the State University of New York at Buffalo and received her Bachelor’s degree in Psychology and Sociology in 1986. She continued her graduate education in Buffalo and earned her doctorate in Counseling Psychology in  1995.  </p>
+                    <p>She completed her internship at the James Haley VA Medical Center where she received training in inpatient psychiatry, child development, neuropsychology, and geriatrics. She served her residency at the Florida Center for Cognitive Therapy. 
+</p>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -103,29 +109,48 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Our
-                        <strong>Team</strong>
+                    <h2 class="intro-text text-center">
+                        <strong>Publications and Research Experience</strong>
                     </h2>
                     <hr>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
-                </div>
+                
+                    <p>October, 1989- December, 1994, SUNY at Buffalo,  Buffalo, NY.
+Experience	Published Dissertation: <span class = "td">A comparison of foster children, the biological children of foster parents, and children from non-foster homes with respect of: behavior, self-esteem attachment, coping and family perceptions.</span>
+</p>
+                    <p>October, 1989-November 1992, SUNY at Buffalo, Buffalo, NY.
+Pre-doctoral research. <span class = "td">Two comparisons: Foster mothers versus fathers and single versus married foster parents.</span>
+</p>
+                    <p>September, 1990-December, 1990, SUNY at Buffalo, Buffalo, NY.
+Research Assistant in study with Carol Kutchukian.<span class = "td"> Determining the relationship among measures of academic performance, stress, and self –concept.</span> 
+</p>
+                    <p>March, 1990-June 1990, SU College at Buffalo, Buffalo, NY.
+Research Assistant in study with Joan McCool. <span class="td">Time management and Managing Multiple Priorities.</span> </p>
+                    <p>September, 1989-December 1989, SUNY at Buffalo, NY.
+Secondary Investigator to Jeremy Finn. <span class= "td"> Repeated measures analysis of mood and abortion.</span></p>
+                    <p>June, 1989-August 1989, SUNY at Buffalo, Buffalo, NY. Research Assistant to Michael Farrell. <span class="td"></span>Continued investigation of men at mid-life.</span></p>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
+        <div class="row">
+                    <div class="box">
+                        <div class="col-lg-12">
+                            <hr>
+                            <h2 class="intro-text text-center">
+                                <strong>Presentations</strong>
+                            </h2>
+                            <hr>
+                        </div>
+                
+                    <p>Palcan, L. Palcan, (July 9, 2016) <span class= "td">Women’s Issues: Loss/Grief, Being Single, Domestic Violence and Empowerment. </span>Women’s Conference at the Clearwater SDA Church
+
+</p>
+                    <p>Palcan, R.L Palcan, (April 27, 2015)<span class="td">Bay Pines VAHCS: Tobacco Free Program. Florida Annual Conference for  Tobacco Treatment Specialists.</span> </p>
+                    <p>R.L. (May 27, 2010) <span class="td">The Medical Home in Primary Care-Mental Health.</span> Mental Health-Behavioral Science Grand Rounds presentation at Bay Pines VAHCS.</p>
+                    <p>Palcan, R. L. (March 26, 2010) <span class="td">Primary Care and Mental Health Integration. </span> Presentation to Bay Pines VAHCS Psychology Interns.</p>
+                    <p>Palcan, R. L. (October, 14, 2009) <span class= "td">Motivational Interviewing.</span> Primary Care Grand Rounds presentation at Bay Pines VAHCS</p>
+                    <p>Palcan, R.L. April 24, 2012) Running a Shared Medical Appointment “Quick Guide”. Telephone conference presentation to VISN 8 HPDP Leadership.</p>
                 <div class="clearfix"></div>
             </div>
         </div>
