--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Fonts -->
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -133,9 +134,9 @@
                     <hr>
                     <img class="img-responsive img-border img-left" src="img/MOM.PNG" alt="Dr. Roma Palcan">
                     <hr class="visible-xs">
-                    <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
-                    <p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p>When it’s time to seek counsel and guidance from a trusted psychologist….</p>
+                    <p>Each person is equipped with many strengths that will get them through difficult times. When it seems like you have exhausted your ideas, a good psychologist provides new understanding, support, and  strategies to understanding yourself and others better and to build coping skills to deal with difficult emotions, relationships and life circumstances.  Take time for yourself and turn your circumstances around.  There is no better investment to make than to strengthen yourself.</p>
+                    <p>When selecting a psychologist, look for expertise, character, and good reputation.  Choose someone who you feel comfortable with and who is practiced and wise. Select someone who other psychologists and medical professionals trust with their own family and friends.  Trust Dr. Roma Palcan.</p>
                 </div>
             </div>
         </div>
@@ -144,12 +145,11 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Beautiful boxes
-                        <strong>to showcase your content</strong>
+                    <h2 class="intro-text text-center">
+                        <strong>Welcome</strong> to my practice...
                     </h2>
                     <hr>
-                    <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p>I am a licensed psychologist in St. Petersburg, Florida with over 20-years of psychological service to adults, couples, families and adolescents.   It is a privilege to assist you with your psychological and relationship stressors with the finest of evidence-based treatments.  Thank you for considering me in as you seek psychological service for yourself or your loved ones.</p>
                 </div>
             </div>
         </div>
