--- a/index.html
+++ b/index.html
@@ -100,10 +100,25 @@
                                 <img class="img-responsive img-full" src="img/IMG_0046.JPG" alt="Flower Arc">
                             </div>
                             <div class="item">
+                                <img class="img-responsive img-full" src="img/slide1.jpg" alt="Flower">
+                            </div>
+                            <div class="item">
                                 <img class="img-responsive img-full" src="img/IMG_0048.JPG" alt="Ivy Wall">
                             </div>
                             <div class="item">
+                                <img class="img-responsive img-full" src="img/slide2.jpg" alt="Flower">
+                            </div>
+                            <div class="item">
                                 <img class="img-responsive img-full" src="img/IMG_0052.JPG" alt="Flower">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive img-full" src="img/slide3.jpg" alt="Flower">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive img-full" src="img/slide4.jpg" alt="Flower">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive img-full" src="img/slide5.jpg" alt="Flower">
                             </div>
                         </div>
 
