--- a/index.html
+++ b/index.html
@@ -92,33 +92,34 @@
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="6"></li>
                         </ol>
 
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="img/IMG_0046.JPG" alt="Flower Arc">
+                                <img class="img-responsive img-full" src="img/slide6.jpg" alt="Flower Arc">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/slide1.jpg" alt="Flower">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/IMG_0048.JPG" alt="Ivy Wall">
+                                <img class="img-responsive img-full" src="img/slide5.jpg" alt="Ivy Wall">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/slide2.jpg" alt="Flower">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/IMG_0052.JPG" alt="Flower">
+                                <img class="img-responsive img-full" src="img/slide7" alt="Flower">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/slide3.jpg" alt="Flower">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/slide4.jpg" alt="Flower">
-                            </div>
-                            <div class="item">
-                                <img class="img-responsive img-full" src="img/slide5.jpg" alt="Flower">
                             </div>
                         </div>
 
