--- a/index.html
+++ b/index.html
@@ -101,19 +101,19 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="img/slide6.jpg" alt="Flower Arc">
+                                <img class="img-responsive img-full" src="img/slide6.JPG" alt="Flower Arc">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/slide1.jpg" alt="Flower">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/slide5.jpg" alt="Ivy Wall">
+                                <img class="img-responsive img-full" src="img/slide5.JPG" alt="Ivy Wall">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/slide2.jpg" alt="Flower">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/slide7" alt="Flower">
+                                <img class="img-responsive img-full" src="img/slide7.JPG" alt="Flower">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/slide3.jpg" alt="Flower">
