--- a/index.html
+++ b/index.html
@@ -33,15 +33,19 @@
         .img-left {
             max-height: 300px;
         }
+        
+        .topper {
+            color: rgb(250,205,190);
+        }
     </style>
 
 </head>
 
 <body>
-
+<div class = "topper">
     <div class="brand">Dr. Roma Palcan</div>
     <div class="address-bar">1201 5th Ave N Ste 300 | Saint Petersburg, FL 33705 | 727.895.4500</div>
-
+</div>
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
@@ -178,8 +182,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <p>Copyright &copy; Roma Palcan 2016
-                    <br>
-                    <small>Photo credit: "Silence" by <a href="https://www.flickr.com/photos/137731904@N05/">N Medd</a> under the <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">Creative Commons License</a></small></p>
+                   
                 </div>
             </div>
         </div>
