background color top

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
         
         .topper {
-            color: rgb(250,205,190);
+            background-color: rgb(250,205,190);
         }
     </style>
 
