--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@ Experience	Published Dissertation: <span class = "td">A comparison of foster chi
 Pre-doctoral research. <span class = "td">Two comparisons: Foster mothers versus fathers and single versus married foster parents.</span>
 </p>
                     <p>September, 1990-December, 1990, SUNY at Buffalo, Buffalo, NY.
-Research Assistant in study with Carol Kutchukian.<span class = "td"> Determining the relationship among measures of academic performance, stress, and self –concept.</span> 
+Research Assistant in study with Carol Kutchukian.<span class = "td">Determining the relationship among measures of academic performance, stress, and self –concept.</span> 
 </p>
                     <p>March, 1990-June 1990, SU College at Buffalo, Buffalo, NY.
 Research Assistant in study with Joan McCool. <span class="td">Time management and Managing Multiple Priorities.</span> </p>
@@ -146,8 +146,8 @@ Secondary Investigator to Jeremy Finn. <span class= "td"> Repeated measures anal
                     <p>Palcan, L. Palcan, (July 9, 2016) <span class= "td">Women’s Issues: Loss/Grief, Being Single, Domestic Violence and Empowerment. </span>Women’s Conference at the Clearwater SDA Church
 
 </p>
-                    <p>Palcan, R.L Palcan, (April 27, 2015)<span class="td">Bay Pines VAHCS: Tobacco Free Program. Florida Annual Conference for  Tobacco Treatment Specialists.</span> </p>
-                    <p>R.L. (May 27, 2010) <span class="td">The Medical Home in Primary Care-Mental Health.</span> Mental Health-Behavioral Science Grand Rounds presentation at Bay Pines VAHCS.</p>
+                    <p>Palcan, R.L (April 27, 2015) <span class="td">Bay Pines VAHCS: Tobacco Free Program. Florida Annual Conference for  Tobacco Treatment Specialists.</span> </p>
+                    <p>Palcan, R.L. (May 27, 2010) <span class="td">The Medical Home in Primary Care-Mental Health.</span> Mental Health-Behavioral Science Grand Rounds presentation at Bay Pines VAHCS.</p>
                     <p>Palcan, R. L. (March 26, 2010) <span class="td">Primary Care and Mental Health Integration. </span> Presentation to Bay Pines VAHCS Psychology Interns.</p>
                     <p>Palcan, R. L. (October, 14, 2009) <span class= "td">Motivational Interviewing.</span> Primary Care Grand Rounds presentation at Bay Pines VAHCS</p>
                     <p>Palcan, R.L. April 24, 2012) Running a Shared Medical Appointment “Quick Guide”. Telephone conference presentation to VISN 8 HPDP Leadership.</p>
@@ -163,8 +163,6 @@ Secondary Investigator to Jeremy Finn. <span class= "td"> Repeated measures anal
             <div class="row">
                 <div class="col-lg-12 text-center">
                    <p>Copyright &copy; Roma Palcan 2016
-                    <br>
-                    <small>Photo credit: "Silence" by <a href="https://www.flickr.com/photos/137731904@N05/">N Medd</a> under the <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">Creative Commons License</a></small></p>
                 </div>
             </div>
         </div>
