--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">Contact
-                        <strong>business casual</strong>
+                        <strong>Roma Palcan</strong>
                     </h2>
                     <hr>
                 </div>
@@ -96,13 +96,11 @@
                     <p>Phone:
                         <strong>727.895.4500</strong>
                     </p>
-                    <p>Email:
-                        <strong><a href="mailto:name@example.com">name@example.com</a></strong>
-                    </p>
                     <p>Address:
                         <strong>1201 5th Ave N
                             <br>St. Petersburg, Fl 33705</strong>
                     </p>
+                    <p>Directions: <strong>Third floor, office of Dr. Anthony Figueroa</strong></p>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -115,8 +113,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <p>Copyright &copy; Roma Palcan 2016
-                    <br>
-                    <small>Photo credit: "Silence" by <a href="https://www.flickr.com/photos/137731904@N05/">N Medd</a> under the <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">Creative Commons License</a></small></p>
                 </div>
             </div>
         </div>
