--- a/forms.html
+++ b/forms.html
@@ -92,6 +92,7 @@
                     <ul>
                        <li> <a href="officepolicies.pdf">Office Policies<a></li>
                         <li><a href="privacyinformation.pdf">H.I.P.P.A. Privacy Information<a></li> 
+                        <li><a href="Personal History Form_ Adult.pdf">Personal History Form</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"></div>
@@ -105,8 +106,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <p>Copyright &copy; Roma Palcan 2016
-                    <br>
-                    <small>Photo credit: "Silence" by <a href="https://www.flickr.com/photos/137731904@N05/">N Medd</a> under the <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">Creative Commons License</a></small></p>
                 </div>
             </div>
         </div>
