--- a/forms.html
+++ b/forms.html
@@ -28,11 +28,6 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style>
-        .forms {
-            text-align: center;
-        }
-    </style>
 
 </head>
 
@@ -91,7 +86,7 @@
                     </h2>
                     <hr>
                 </div>
-                <div class="col-md-12" "forms">
+                <div class="col-md-12  text-center">
                     <p>Please fill out and bring to the office on your first visit.</p>
                     <ul>
                        <li> <a href="officepolicies.pdf">Office Policies<a></li>
