--- a/forms.html
+++ b/forms.html
@@ -86,13 +86,15 @@
                     </h2>
                     <hr>
                 </div>
-                <div class="col-md-12  text-center">
+                <div class="col-md-12">
                     <p>Please fill out and bring to the office on your first visit.</p>
+                    <div style="width: 25%; margin-left: auto; margin-right: auto;">
                     <ul>
                        <li> <a href="officepolicies.pdf">Office Policies<a></li>
                         <li><a href="privacyinformation.pdf">H.I.P.P.A. Privacy Information<a></li> 
                         <li><a href="Personal History Form_ Adult.pdf">Personal History Form</a></li>
                     </ul>
+                    </div>
                 </div>
                 <div class="clearfix"></div>
             </div>
