--- a/forms.html
+++ b/forms.html
@@ -86,7 +86,7 @@
                     </h2>
                     <hr>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-12" style="text-align: center">
                     <p>Please fill out and bring to the office on your first visit.</p>
                     <div style="width: 25%; margin-left: auto; margin-right: auto;">
                     <ul>
