--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@ Research Assistant in study with Carol Kutchukian.<span class = "td">Determining
 Research Assistant in study with Joan McCool. <span class="td">Time management and Managing Multiple Priorities.</span> </p>
                     <p>September, 1989-December 1989, SUNY at Buffalo, NY.
 Secondary Investigator to Jeremy Finn. <span class= "td"> Repeated measures analysis of mood and abortion.</span></p>
-                    <p>June, 1989-August 1989, SUNY at Buffalo, Buffalo, NY. Research Assistant to Michael Farrell. <span class="td"></span>Continued investigation of men at mid-life.</span></p>
+                    <p>June, 1989-August 1989, SUNY at Buffalo, Buffalo, NY. Research Assistant to Michael Farrell. <span class="td">Continued investigation of men at mid-life.</span></p>
                 <div class="clearfix"></div>
             </div>
         </div>
@@ -143,14 +143,14 @@ Secondary Investigator to Jeremy Finn. <span class= "td"> Repeated measures anal
                             <hr>
                         </div>
                 
-                    <p>Palcan, L. Palcan, (July 9, 2016) <span class= "td">Women’s Issues: Loss/Grief, Being Single, Domestic Violence and Empowerment. </span>Women’s Conference at the Clearwater SDA Church
+                    <p>Palcan, R.L. (July 9, 2016) <span class= "td">Women’s Issues: Loss/Grief, Being Single, Domestic Violence and Empowerment.</span>Women’s Conference at the Clearwater SDA Church
 
 </p>
                     <p>Palcan, R.L (April 27, 2015) <span class="td">Bay Pines VAHCS: Tobacco Free Program. Florida Annual Conference for  Tobacco Treatment Specialists.</span> </p>
                     <p>Palcan, R.L. (May 27, 2010) <span class="td">The Medical Home in Primary Care-Mental Health.</span> Mental Health-Behavioral Science Grand Rounds presentation at Bay Pines VAHCS.</p>
-                    <p>Palcan, R. L. (March 26, 2010) <span class="td">Primary Care and Mental Health Integration. </span> Presentation to Bay Pines VAHCS Psychology Interns.</p>
-                    <p>Palcan, R. L. (October, 14, 2009) <span class= "td">Motivational Interviewing.</span> Primary Care Grand Rounds presentation at Bay Pines VAHCS</p>
-                    <p>Palcan, R.L. April 24, 2012) Running a Shared Medical Appointment “Quick Guide”. Telephone conference presentation to VISN 8 HPDP Leadership.</p>
+                    <p>Palcan, R. L. (March 26, 2010) <span class="td">Primary Care and Mental Health Integration.</span> Presentation to Bay Pines VAHCS Psychology Interns.</p>
+                    <p>Palcan, R. L. (October, 14, 2009) <span class= "td">Motivational Interviewing.</span> Primary Care Grand Rounds presentation at Bay Pines VAHCS.</p>
+                    <p>Palcan, R.L. (April 24, 2012) <span class= "td">Running a Shared Medical Appointment “Quick Guide”.</span> Telephone conference presentation to VISN 8 HPDP Leadership.</p>
                 <div class="clearfix"></div>
             </div>
         </div>
