--- a/forms.html
+++ b/forms.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-md-12" style="text-align: center">
                     <p>Please fill out and bring to the office on your first visit.</p>
-                    <div style="width: 25%; margin-left: auto; margin-right: auto;">
+                    <div style="width: 25%; margin-left: auto; margin-right: auto; text-align: left">
                     <ul>
                        <li> <a href="officepolicies.pdf">Office Policies<a></li>
                         <li><a href="privacyinformation.pdf">H.I.P.P.A. Privacy Information<a></li> 
