--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <strong>Welcome</strong> to my practice
                     </h2>
                     <hr>
-                    <img class="img-responsive img-border img-left" src="img/Roma1.JPG" align = "left" alt="Dr. Roma Palcan">
+                    <img class="img-responsive img-border img-left" src="img/Roma1.JPG" alt="Dr. Roma Palcan">
                     <hr class="visible-xs">
                     <p>I am a licensed psychologist in St. Petersburg, Florida with over 20-years of psychological service to adults, couples, families and adolescents.   It is a privilege to assist you with your psychological and relationship stressors with the finest of evidence-based treatments.  Thank you for considering me in as you seek psychological service for yourself or your loved ones.</p>
                 </div>
