--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
         <div class="row">
             <div class="box">
-                <div class="col-lg-12">
+                <div class="col-lg-12 clearfix">
                     <hr>
                     <h2 class="intro-text text-center">
                         <strong>Welcome</strong> to my practice
