--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                     <hr>
                 </div>
                 <div class="clearfix">
-                    <div class = "col-lg-6 col-xs-12">
+                    <div class = "col-sm-6 col-xs-12">
                     <img class="img-responsive img-border img-left" src="img/Roma2.JPG" alt="Dr. Roma Palcan" style = "padding-right: 15px; padding-bottom: 10px;">
                     </div>
                     <hr class="visible-xs">
